# kafka-cli-rs

./: .gitignore  Cargo.toml  DockerfileChef  docker-compose.yaml  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml  docker.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/args/: Cargo.toml
crates/args/src/: cli_parser.rs  lib.rs  load_from_file.rs
crates/kafka-config/: Cargo.toml
crates/kafka-config/src/: consumer.rs  lib.rs  producer.rs
crates/kafka-consumer/: Cargo.toml
crates/kafka-consumer/src/: lib.rs
crates/kafka-producer/: Cargo.toml
crates/kafka-producer/src/: lib.rs
crates/schema-registry/: Cargo.toml
crates/schema-registry/src/: lib.rs
resources/: msg.msg  producer.yaml
