[package]
name = "args"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { workspace = true }
url = { workspace = true }
config = { workspace = true }
kafka-config = { path = "../kafka-config" }
serde ={ workspace = true }
