[package]
name = "schema-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = {workspace = true}
schema_registry_converter = {workspace = true}
rdkafka = { workspace = true}
opentelemetry = {workspace = true}